--- a/config.env
+++ b/config.env
@@ -1,1 +1,10 @@
+NODE_ENV=
+PORT=
+DATABASE_MONGOSHELL_STRING=
+DATABASE=
+DATABASE_USER=
+DATABASE_PASSWORD=
 
+JWT_SECRET=
+JWT_EXPIRES_IN=
+JWT_COOKIE_EXPIRES_IN=
